--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,18 @@ room-item {
 
 .message-container {
     top: 73px; bottom: 70px;
-    left: 30%; right: 30%;
+    left: 20%;
+    /*right: 30%;*/
+    min-height: 400px;
+    background: #FAFAFA;
+    position: absolute;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.wordcloud {
+    top: 73px; bottom: 70px;
+    left: 50%;
+    /*right: 30%;*/
     min-height: 400px;
     background: #FAFAFA;
     position: absolute;
