--- a/public/modules/room/views/room.html
+++ b/public/modules/room/views/room.html
@@ -35,5 +35,15 @@
             <chatbox></chatbox>
         </div>
     </div>
+
 </div>
 
+
+<div class="wordcloud" style="width:400px">
+    <div class="row message-row">
+        <div class="col s12 message-col">
+            <word-cloud></word-cloud>
+        </div>
+    </div>
+
+</div>
