Added wordcloud but css breaks

--- a/public/modules/room/views/room.html
+++ b/public/modules/room/views/room.html
@@ -39,11 +39,11 @@
 </div>
 
 
-<div class="wordcloud" style="width:400px">
+<!-- <div class="wordcloud" style="width:400px">
     <div class="row message-row">
         <div class="col s12 message-col">
             <word-cloud></word-cloud>
         </div>
     </div>
 
-</div>
+</div> -->
