--- a/public/modules/room/views/chatbox.html
+++ b/public/modules/room/views/chatbox.html
@@ -1,6 +1,6 @@
 <ul class="messageList row" scroll-glue>
     <div class="col s12 deep-orange-text text-darken-3 center-align say-something" ng-hide="messages.length > 0">
-        Try saying something to your phone! <br>
+        Try saying something on your phone! <br>
         <a href="https://drive.google.com/drive/folders/0B7kgLPShx-LNVlhPWVZNMFdjR28?usp=sharing">
             Get latest AppLa on Android
         </a>
