--- a/public/modules/room/views/room.html
+++ b/public/modules/room/views/room.html
@@ -22,7 +22,7 @@
     </div>
 </nav>
 
-<div class="message-container">
+<div class="message-container-room">
     <div class="row">
         <div class="col s12">
             <h4 class="room-title center-align deep-orange-text text-darken-1">{{room.room_name}}</h4>
@@ -39,11 +39,11 @@
 </div>
 
 
-<!-- <div class="wordcloud" style="width:400px">
+<div class="wordcloud" style="width:400px">
     <div class="row message-row">
         <div class="col s12 message-col">
             <word-cloud></word-cloud>
         </div>
     </div>
 
-</div> -->
+</div>
