--- a/public/modules/room/views/room.html
+++ b/public/modules/room/views/room.html
@@ -39,10 +39,20 @@
 </div>
 
 
-<div class="wordcloud" style="width:400px">
+<div class="wordcloud">
     <div class="row message-row">
         <div class="col s12 message-col">
             <word-cloud></word-cloud>
+        </div>
+    </div>
+
+</div>
+
+<div class="my-dictionary">
+    <div class="row message-row">
+        <div class="col s12 message-col">
+            <h5>My Dictionary</h5>
+            <ul id="dictionary"></ul>
         </div>
     </div>
 
