--- a/public/modules/room/views/room.html
+++ b/public/modules/room/views/room.html
@@ -22,6 +22,12 @@
     </div>
 </nav>
 
+<div class="nav">
+  <a class="waves-effect waves-light btn">Conversation</a>
+  <a class="waves-effect waves-light btn">WordCloud</a>
+  <a class="waves-effect waves-light btn">Dictionary</a>
+</div>
+
 <div class="message-container-room">
     <div class="row">
         <div class="col s12">
