Show on small and down

--- a/public/modules/home/views/home.html
+++ b/public/modules/home/views/home.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div class="col s12 offset-m5 m7 offset-l5 l7 hide-on-small-and-down">
+    <div class="col s12 offset-m5 m7 offset-l5 l7">
         <ul class="collection with-header" ng-show="noRoomMessage == ''">
             <li class="collection-header"><h4>Rooms</h4></li>
             <room-item user-info="user" room="room" ng-repeat="room in rooms | orderBy: '-created_at'"></room-item>
