--- a/public/modules/room/views/wordcloud.html
+++ b/public/modules/room/views/wordcloud.html
@@ -1,16 +1,16 @@
     <div>
-      <h5>{{title}}</h5>
+      <h5 class="center-align deep-orange-text" style="margin-top:25px">WordCloud</h5>
       <!-- <br />
       <textarea id="txt" cols="35" rows="10" placeholder="">Tien tien Tien tieN TiEn Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec enim non ante interdum bibendum. Vivamus imperdiet pretium velit vitae tempus. Integer ultrices eros eu libero venenatis, quis laoreet massa accumsan. Aliquam vitae purus consectetur, vestibulum purus eget, mattis metus. Aenean sed dolor libero. Nulla eget sapien eget sapien aliquet congue feugiat et ligula. Nulla facilisi. Praesent auctor leo ullamcorper risus posuere pellentesque. Duis vulputate et orci vitae congue. Ut molestie magna lectus, sit amet efficitur purus tempor id. Quisque tristique ipsum mi, nec dapibus dui lacinia quis. Suspendisse imperdiet ipsum et nibh placerat, sit amet lacinia neque laoreet. Curabitur.</textarea>
       <br /> -->
-      <button type="button" ng-click="drawWordCloud()">Draw WordCloud</button>
+      <!-- <button type="button" ng-click="drawWordCloud()">Draw WordCloud</button> -->
       <br />
       <p id="result"></p>
     </div>
 
     <div class="right">
 
-      <div id='wordcloud'></div>
+      <div style="text-align:center" id='wordcloud'></div>
     </div>
 
     <script src="/lib/d3/d3.js" charset="utf-8"></script>
